# management_orders

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-ci.yml
alembic/: env.py
alembic/versions/: 2025_12_15_2127-0ca7252d8ff2_second_fix.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/routes/: auth.py  orders.py
app/consumers/: __init__.py  new_order_consumer.py
app/core/: config.py  security.py
app/db/: __init__.py  migrate_script.py  models.py  session.py
app/middleware/: rate_limit.py
app/repositories/: orders.py  users.py
app/schemas/: auth.py  orders.py
app/services/: auth.py  cache.py  messaging.py  orders.py
app/tasks/: celery_app.py  worker_tasks.py
tests/: conftest.py  test_api.py  test_cache.py  test_messaging.py  test_rate_limit.py  test_security.py  test_services.py
