[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "order-service"
version = "0.1.0"
description = "FastAPI order management service with auth, RabbitMQ, Redis cache, and Celery background tasks."
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [{ name = "You", email = "you@example.com" }]

dependencies = [
    "fastapi>=0.115.6,<0.116.0",
    "uvicorn>=0.30",
    "pydantic[email]>=2.10.4,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "alembic>=1.14.0,<2.0.0",
    "redis>=5.2.1,<6.0.0",
    "aio-pika>=9.5.0,<10.0.0",
    "celery>=5.4.0,<6.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.20,<0.0.21",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.25.0,<0.26.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "httpx>=0.28.1,<0.29.0",
    "aiosqlite>=0.20.0,<0.21.0",
    "ruff>=0.8.3,<0.9.0",
    "mypy>=1.13.0,<2.0.0",
    "types-redis>=4.6.0.20241004",
    "types-passlib>=1.7.7.20240819",
    "types-python-jose>=3.3.4.20240106",
    "fastapi-limiter (>=0.1.6,<0.2.0)",
    "faker (>=38.2.0,<39.0.0)",
]

[tool.poetry]
package-mode = false
packages = [{ include = "app" }]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]


[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
ignore_missing_imports = true
